--- a/static/styles/vendorPage.css
+++ b/static/styles/vendorPage.css
@@ -1,45 +1,54 @@
 body {
   font-family: Arial, sans-serif;
-  background-color: #f0f0f0;
+  background-color: #f5f5f5;
   margin: 0;
   padding: 0;
 }
 
 .container {
-  max-width: 600px;
+  max-width: 800px;
   margin: 0 auto;
-  background-color: #fff;
   padding: 100px;
-  padding-top: 20px;
-  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+  background-color: whitesmoke;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
   border-radius: 5px;
   text-align: center;
+  padding-top: 0;
 }
 
-.vendor-submit,
-input,
-select,
-textarea {
-  margin: 10px 0;
-  width: 100%;
-  padding: 10px;
-  border: 1px solid #ccc;
-  border-radius: 5px;
+h1 {
+  font-size: 28px;
+  color: #333;
 }
 
-.vendor-submit {
-  background-color: #a753ff;
+h2 {
+  font-size: 20px;
+  color: #333;
+}
+
+button {
+  background-color: #007bff;
   color: #fff;
+  font-size: 16px;
   cursor: pointer;
 }
 
-.vendor-submit:hover {
-  background-color: #b39eb5;
-}
-#generateTrackingBtn {
-  color: white;
+select,
+input[type="text"] {
+  padding: 10px;
+  width: 100%;
+  margin: 5px 0;
+  border: 1px solid #ccc;
+  border-radius: 3px;
+  font-size: 16px;
 }
 
-.hidden {
-  display: none;
+form {
+  text-align: left;
+}
+
+.feedback {
+  margin-top: 10px;
+  font-size: 16px;
+  color: #333;
 }
