--- a/template/pages/404.html
+++ b/template/pages/404.html
@@ -14,7 +14,8 @@
       <h3>Oops, nothing here...</h3>
       <p>Please Check the URL</p>
       <p>
-        Otherwise, <a href="#homepage">Click here</a> to redirect to homepage.
+        Otherwise, <a href="vendorPage.html">Click here</a> to redirect to
+        homepage.
       </p>
     </div>
   </body>
