--- a/templates/aboutus.html
+++ b/templates/aboutus.html
@@ -47,7 +47,7 @@
     <footer>
         <p>Join Us on Our Tech Journey</p>
         <p>Stay curious, stay inspired, and let's code the future together!</p>
-        <p>Sincerely, <strong>TRACKERR</strong></p>
+        <p>Sincerely, <a href= "home.html" <strong>TRACKERR</strong></a></p>
     </footer>
 </body>
 </html>
