--- a/static/styles/aboutus.css
+++ b/static/styles/aboutus.css
@@ -1,6 +1,15 @@
 body {
     background-image: linear-gradient(to bottom, #d16ba5, #c777b9, #ba83ca, #aa8fd8, #9a9ae1, #8aa7ec, #79b3f4, #69bff8, #52cffe, #41dfff, #46eefa, #5ffbf1);
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-style: oblique;
+    padding: 0%;
+    height: 100vh;
+}
+
+a {
+    color: #171616;
+    font-weight: 500;
+    font-size: larger;
 }
 
 h1,
