--- a/templates/aboutus.html
+++ b/templates/aboutus.html
@@ -12,7 +12,8 @@
         <h1>ABOUT US</h1><div class="duplicated-h1">TRACKERR</div>
     </header>
     <h2>
-        Welcome to our corner of the digital universe! We are a dynamic quartet of software engineers, united by a shared passion for technology, innovation, and the relentless pursuit of excellence. Allow us to introduce ourselves:
+        Welcome to Trackerr, the ultimate parcel tracking application designed for vendors to efficiently manage and track their shipments to customers. With Trackerr, you can streamline your shipping processes, provide real-time tracking information to your customers, and improve overall customer satisfaction.
+        Allow us to introduce ourselves:
     </h2>
 
     <section class="team" id="team">
