--- a/templates/updatePassword.htm
+++ b/templates/updatePassword.htm
@@ -1,4 +1,4 @@
-<form action={{url_for('reset')}} method='POST'>
+<form action={{url_for('reset')}} method='put'>
 <input type='password' name='oldPw' placeholder='Enter old password' required/>
 <input type='password' name='newPw' placeholder='Enter new password' required />
 <input type='submit' value='Submit'/>
