--- a/template/pages/contact.html
+++ b/template/pages/contact.html
@@ -2,7 +2,7 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="UTF-8" />
-    <title>Contuct Us</title>
+    <title>Contact Us-Tackerr</title>
     <link rel="stylesheet" href="style.css" />
 
     <link
