--- a/template/pages/login.html
+++ b/template/pages/login.html
@@ -13,9 +13,9 @@
         <a href="#" title="Logo">
           <img
             class="logo"
-            src="/Trackerr/static/login-02/assets/trackerr-logo.jpg"
+            src="/Trackerr/static/assets/chevron.svg"
             alt="Logo"
-            style="border: 2px solid plum; border-radius: 5px"
+            style="transform: rotate(360deg)"
           />
         </a>
         <div class="my-form__wrapper">
