--- a/template/pages/landingPage.html
+++ b/template/pages/landingPage.html
@@ -19,6 +19,14 @@
     />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      rel="stylesheet"
+      href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
+    />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
+    />
 
     <title>Trackerr</title>
     <link
@@ -31,22 +39,10 @@
       @import url("https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap");
     </style>
     <style>
-      /* Add CSS for styling */
       .collapsible-container {
-        margin: 20px;
         padding: 10px;
         border: 1px solid #ddd;
         border-radius: 5px;
-      }
-
-      .collapsible-button {
-        background-color: #007bff;
-        color: #fff;
-        padding: 10px 15px;
-        border: none;
-        border-radius: 5px;
-        cursor: pointer;
-        text-align: center;
       }
 
       .collapsible-content {
@@ -55,6 +51,93 @@
         background-color: #f5f5f5;
         border: 1px solid #ddd;
         border-radius: 5px;
+        flex-basis: 100%;
+      }
+
+      .hh-grayBox {
+        background-color: #f8f8f8;
+        margin-bottom: 20px;
+        padding: 35px;
+        margin-top: 20px;
+      }
+      .pt45 {
+        padding-top: 45px;
+      }
+      .order-tracking {
+        text-align: center;
+        width: 33.33%;
+        position: relative;
+        display: block;
+      }
+      .order-tracking .is-complete {
+        display: block;
+        position: relative;
+        border-radius: 50%;
+        height: 30px;
+        width: 30px;
+        border: 0px solid #afafaf;
+        background-color: green;
+        margin: 0 auto;
+        transition: background 0.25s linear;
+        -webkit-transition: background 0.25s linear;
+        z-index: 2;
+      }
+      .order-tracking .is-complete:after {
+        display: block;
+        position: absolute;
+        content: "";
+        height: 14px;
+        width: 7px;
+        top: -2px;
+        bottom: 0;
+        left: 5px;
+        margin: auto 0;
+        border: 0px solid #afafaf;
+        border-width: 0px 2px 2px 0;
+        transform: rotate(45deg);
+        opacity: 0;
+      }
+      .order-tracking.completed .is-complete {
+        border-color: #a753ff;
+        border-width: 0px;
+        background-color: #a753ff;
+      }
+      .order-tracking.completed .is-complete:after {
+        border-color: #fff;
+        border-width: 0px 3px 3px 0;
+        width: 7px;
+        left: 11px;
+        opacity: 1;
+      }
+      .order-tracking p {
+        color: #a4a4a4;
+        font-size: 16px;
+        margin-top: 8px;
+        margin-bottom: 0;
+        line-height: 20px;
+      }
+      .order-tracking p span {
+        font-size: 14px;
+      }
+      .order-tracking.completed p {
+        color: #000;
+      }
+      .order-tracking::before {
+        content: "";
+        display: block;
+        height: 3px;
+        width: calc(100% - 40px);
+        background-color: rgb(44, 178, 44);
+        top: 13px;
+        position: absolute;
+        left: calc(-50% + 20px);
+        z-index: 0;
+      }
+      .order-tracking:first-child:before {
+        display: none;
+      }
+      .order-tracking.completed:before {
+        background-color: #a753ff;
       }
     </style>
   </head>
@@ -72,11 +155,11 @@
                   alt="Logo"
                   class="logo"
               /></a>
-              <a href="#news" class="link">News</a>
-              <a href="#contact" class="link">Contact</a>
+
+              <a href="./contact.html" class="link">Contact</a>
               <a href="#about" class="link">About</a>
 
-              <a href=""><button>Login</button></a>
+              <a href="./login.html"><button>Login</button></a>
               <a href=""><button>Register</button></a>
             </div>
 
@@ -101,8 +184,6 @@
         <h2>Tracking your parcel is easy with us</h2>
       </div>
       <div class="search-section">
-        <h1>Track</h1>
-
         <input
           type="search"
           id="searchInput"
