--- a/template/pages/vendorPage.html
+++ b/template/pages/vendorPage.html
@@ -42,9 +42,9 @@
                   alt="Logo"
                   class="logo"
               /></a>
-              <a href="#news" class="link">News</a>
-              <a href="#contact" class="link">Contact</a>
-              <a href="#about" class="link">About</a>
+
+              <a href="./contact.html" class="link">Contact</a>
+              <a href="./about.html" class="link">About</a>
 
               <a href=""><button>Logout</button></a>
             </div>
