updated the link href

--- a/template/pages/contact.html
+++ b/template/pages/contact.html
@@ -10,9 +10,9 @@
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css"
     />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="/Trackerr/static/styles/contact.css" />
-    <link rel="stylesheet" href="/Trackerr/static/styles/normalize.css" />
-    <link rel="stylesheet" href="/Trackerr/static/styles/commonStyle.css" />
+    <link rel="stylesheet" href="../static/styles/contact.css" />
+    <link rel="stylesheet" href="../static/styles/normalize.css" />
+    <link rel="stylesheet" href="../static/styles/commonStyle.css" />
   </head>
   <body>
     <div class="container">
@@ -77,5 +77,5 @@
     </div>
   </body>
   <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-  <script src="/Trackerr/static/scripts/contact.js"></script>
+  <script src="../static/scripts/contact.js"></script>
 </html>
