--- a/template/pages/login.html
+++ b/template/pages/login.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8" />
     <title>Trackerr-Login</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="/Trackerr/static/styles/normalize.css" />
-    <link rel="stylesheet" href="/Trackerr/static/login-02/style.css" />
+    <link rel="stylesheet" href="../static/styles/normalize.css" />
+    <link rel="stylesheet" href="../static/login-02/style.css" />
   </head>
   <body>
     <div class="login-wrapper">
@@ -13,7 +13,7 @@
         <a href="#" title="Logo">
           <img
             class="logo"
-            src="/Trackerr/static/assets/chevron.svg"
+            src="../static/assets/chevron.svg"
             alt="Logo"
             style="transform: rotate(360deg)"
           />
@@ -27,7 +27,7 @@
             <div class="socials-row">
               <a href="#" title="Use Google">
                 <img
-                  src="/Trackerr/static/login-02/assets/google.png"
+                  src="../static/login-02/assets/google.png"
                   alt="Google"
                 />
                 Log in with Google
@@ -50,7 +50,7 @@
               <img
                 alt="Email Icon"
                 title="Email Icon"
-                src="/Trackerr/static/login-02/assets/email.svg"
+                src="../static/login-02/assets/email.svg"
               />
             </div>
             <div class="text-field">
@@ -68,7 +68,7 @@
               <img
                 alt="Password Icon"
                 title="Password Icon"
-                src="/Trackerr/static/login-02/assets/password.svg"
+                src="../static/login-02/assets/password.svg"
               />
             </div>
             <input type="submit" class="my-form__button" value="Login" />
@@ -88,7 +88,7 @@
       </div>
       <div class="info-side">
         <img
-          src="/Trackerr/static/login-02/assets/mock.png"
+          src="../static/login-02/assets/mock.png"
           alt="Mock"
           class="mockup"
         />
@@ -98,6 +98,6 @@
         </div>
       </div>
     </div>
-    <script src="/Trackerr/static/login-02/script.js"></script>
+    <script src="../static/login-02/script.js"></script>
   </body>
 </html>
