--- a/template/pages/resetPassword.html
+++ b/template/pages/resetPassword.html
@@ -11,11 +11,11 @@
       rel="stylesheet"
       type="text/css"
     />
-    <link rel="stylesheet" href="/Trackerr/static/styles/normalize.css" />
+    <link rel="stylesheet" href="../static/styles/normalize.css" />
     <link
       rel="stylesheet"
       type="text/css"
-      href="/Trackerr/static/styles/resetPassword.css"
+      href="../static/styles/resetPassword.css"
     />
   </head>
   <body>
@@ -23,7 +23,7 @@
       <div class="form-side">
         <a href="#" title="Logo">
           <img
-            src="/Trackerr/static/login-02/assets/trackerr-logo.jpg"
+            src="../static/login-02/assets/trackerr-logo.jpg"
             class="logo"
             alt="Ofin"
           />
@@ -72,6 +72,6 @@
       </div>
     </div>
 
-    <script src="/Trackerr/static/scripts/resetPassword.js"></script>
+    <script src="../static/scripts/resetPassword.js"></script>
   </body>
 </html>
