--- a/template/pages/about.html
+++ b/template/pages/about.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="/Trackerr/static/styles/normalize.css" />
+    <link rel="stylesheet" href="../static/styles/normalize.css" />
    
 
     <title>About Us</title>
@@ -228,7 +228,7 @@
       <div class="about-info">
         <div class="about-img">
           <img
-            src="/Trackerr/static/login-02/assets/trackerr-logo.jpg"
+            src="../static/login-02/assets/trackerr-logo.jpg"
             style=" border-radius: 5px;"
           />
         </div>
@@ -251,7 +251,7 @@ Trackerr offers a user-friendly interface that simplifies the management of ship
         <div class="card">
           <div class="card-img">
             <img
-              src="/Trackerr/static/login-02/assets/trackerr-logo.jpg"
+              src="../static/login-02/assets/trackerr-logo.jpg"
               alt="User 1"
             />
           </div>
@@ -268,7 +268,7 @@ Trackerr offers a user-friendly interface that simplifies the management of ship
         <div class="card">
           <div class="card-img">
             <img
-              src="/Trackerr/static/login-02/assets/trackerr-logo.jpg"
+              src="../static/login-02/assets/trackerr-logo.jpg"
               alt="User 2"
             />
           </div>
@@ -284,7 +284,7 @@ Trackerr offers a user-friendly interface that simplifies the management of ship
         <div class="card">
           <div class="card-img">
             <img
-              src="/Trackerr/static/login-02/assets/trackerr-logo.jpg"
+              src="../static/login-02/assets/trackerr-logo.jpg"
               alt="User 3"
             />
           </div>
@@ -300,7 +300,7 @@ Trackerr offers a user-friendly interface that simplifies the management of ship
       <div class="card">
         <div class="card-img">
           <img
-            src="/Trackerr/static/login-02/assets/trackerr-logo.jpg"
+            src="../static/login-02/assets/trackerr-logo.jpg"
             alt="User 3"
           />
         </div>
