--- a/template/pages/landingPage.html
+++ b/template/pages/landingPage.html
@@ -33,8 +33,8 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
     />
-    <link rel="stylesheet" href="/Trackerr/static/styles/normalize.css" />
-    <link rel="stylesheet" href="/Trackerr/static/styles/landingPage.css" />
+    <link rel="stylesheet" href="../static/styles/normalize.css" />
+    <link rel="stylesheet" href="../static/styles/landingPage.css" />
     <style>
       @import url("https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap");
     </style>
@@ -151,7 +151,7 @@
                 ><img
                   width="70px"
                   height="50px"
-                  src="/Trackerr/static/login-02/assets/trackerr-logo.jpg"
+                  src="../static/login-02/assets/trackerr-logo.jpg"
                   alt="Logo"
                   class="logo"
               /></a>
@@ -166,7 +166,7 @@
             <a href="javascript:void(0);" class="icon" onclick="myFunction()">
               <i class="fa fa-bars"
                 ><img
-                  src="/Trackerr/static/assets/icons8-hamburger-button-50 (1).png"
+                  src="../static/assets/icons8-hamburger-button-50 (1).png"
                   alt="Menu"
                   style="background-color: white"
                   class="menu"
@@ -213,8 +213,8 @@
       </small>
     </footer>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-    <script src="/Trackerr/static/scripts/landingPage.js"></script>
-    <script src="/Trackerr/static/scripts/dummy.js"></script>
+    <script src="../static/scripts/landingPage.js"></script>
+    <script src="../static/scripts/dummy.js"></script>
     <script>
       function myFunction() {
         var x = document.getElementById("myTopnav");
