--- a/template/pages/vendorPage.html
+++ b/template/pages/vendorPage.html
@@ -21,9 +21,9 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
 
     <title>Trackerr</title>
-    <link rel="stylesheet" href="/Trackerr/static/styles/vendorPage.css" />
-    <link rel="stylesheet" href="/Trackerr/static/styles/normalize.css" />
-    <link rel="stylesheet" href="/Trackerr/static/styles/commonStyle.css" />
+    <link rel="stylesheet" href="../static/styles/vendorPage.css" />
+    <link rel="stylesheet" href="../static/styles/normalize.css" />
+    <link rel="stylesheet" href="../static/styles/commonStyle.css" />
     <style>
       @import url("https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap");
     </style>
@@ -38,7 +38,7 @@
                 ><img
                   width="70px"
                   height="50px"
-                  src="/Trackerr/static/login-02/assets/trackerr-logo.jpg"
+                  src="../static/login-02/assets/trackerr-logo.jpg"
                   alt="Logo"
                   class="logo"
               /></a>
@@ -52,7 +52,7 @@
             <a href="javascript:void(0);" class="icon" onclick="myFunction()">
               <i class="fa fa-bars"
                 ><img
-                  src="/Trackerr/static/assets/icons8-hamburger-button-50 (1).png"
+                  src="../static/assets/icons8-hamburger-button-50 (1).png"
                   alt="Menu"
                   style="background-color: white"
                   class="menu"
@@ -102,7 +102,7 @@
     </footer>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 
-    <script src="/Trackerr/static/scripts/vendorPage.js"></script>
+    <script src="../static/scripts/vendorPage.js"></script>
     <script>
       $(document).ready(function () {
         let generatedTrackingNumber = "";
