--- a/templates/aboutus.html
+++ b/templates/aboutus.html
@@ -8,13 +8,14 @@
     
 </head>
 <body>
-    <header>
+    <header class="about">
         <h1>ABOUT US</h1><div class="duplicated-h1">TRACKERR</div>
+        <h2><span>
+            Welcome to Trackerr, the ultimate parcel tracking application designed for vendors to efficiently manage and track their shipments to customers. With Trackerr, you can streamline your shipping processes, provide real-time tracking information to your customers, and improve overall customer satisfaction.
+            Allow us to introduce ourselves:
+        </span></h2>
     </header>
-    <h2>
-        Welcome to Trackerr, the ultimate parcel tracking application designed for vendors to efficiently manage and track their shipments to customers. With Trackerr, you can streamline your shipping processes, provide real-time tracking information to your customers, and improve overall customer satisfaction.
-        Allow us to introduce ourselves:
-    </h2>
+    
 
     <section class="team" id="team">
         <div class="author">
