--- a/templates/pwdupdate.html
+++ b/templates/pwdupdate.html
@@ -41,6 +41,10 @@
 
         <form class="my-form">
             <div class="socials-col">
+                <label for="oldPassword">Old Password:</label>
+                <div class="password-input">
+                    <input type="password" id="oldPassword" name="oldPassword" required>
+                </div>
                 <label for="newPassword">New Password:</label>
                 <div class="password-input">
                     <input type="password" id="newPassword" name="newPassword" required>
