--- a/template/pages/contact.html
+++ b/template/pages/contact.html
@@ -43,7 +43,7 @@
             complain, you can send us a message from here. It's our pleasure to
             help you.
           </p>
-          <form action="#" id="contactForm">
+          <form action="/contactus" id="contactForm" method="post">
             <div class="input-box">
               <input
                 type="text"
