--- a/template/pages/resetPassword.html
+++ b/template/pages/resetPassword.html
@@ -29,7 +29,8 @@
           />
         </a>
 
-        <form class="my-form">
+        <form action='/recovery' class="my-form" method='post'>
+           
           <h2>
             Enter your email and submit, wait to receive OTP code to reset your
             password
@@ -65,7 +66,7 @@
             </label>
           </div>
           <div id="error-message" class="error-message"></div>
-          <div id="notification-message" class="notification-message"></div>
+          <div id="notification-message" class="notification-message">{{msg}}</div>
 
           <button type="submit" class="my-form__button">submit</button>
         </form>
