--- a/template/pages/landingPage.html
+++ b/template/pages/landingPage.html
@@ -156,10 +156,10 @@
                   class="logo"
               /></a>
 
-              <a href="./contact.html" class="link">Contact</a>
-              <a href="#about" class="link">About</a>
+              <a href="/contactus" class="link">Contact</a>
+              <a href="/about" class="link">About</a>
 
-              <a href="./login.html"><button>Login</button></a>
+              <a href="/login"><button>Login</button></a>
               <a href=""><button>Register</button></a>
             </div>
 
@@ -185,7 +185,7 @@
       </div>
       <div class="search-section">
         <input
-          type="search"
+          type="text"
           id="searchInput"
           name="search"
           placeholder="Enter your tracking number"
