I foond one error corrected

--- a/template/pages/landingPage.html
+++ b/template/pages/landingPage.html
@@ -215,6 +215,7 @@
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="../static/scripts/landingPage.js"></script>
     <script src="../static/scripts/dummy.js"></script>
+    <script hrf="/Tracker/static/scripts/dummy/script>
     <script>
       function myFunction() {
         var x = document.getElementById("myTopnav");
