the reset password form

--- a/template/pages/resetPassword.html
+++ b/template/pages/resetPassword.html
@@ -19,59 +19,24 @@
     />
   </head>
   <body>
-    <div class="form-wrapper">
-      <div class="form-side">
-        <a href="#" title="Logo">
-          <img
-            src="../static/login-02/assets/trackerr-logo.jpg"
-            class="logo"
-            alt="Ofin"
-          />
-        </a>
+    <main>
+      <h2>
+        Enter your email and submit, wait to receive OTP code to reset your
+        password
+      </h2>
+      <form action="/recovery" method="post" id="resetPasswordForm">
+        <label for="email">Email:</label>
+        <input
+          type="email"
+          id="email"
+          placeholder="enter the email you registered with"
+          required
+        />
+        <button type="submit">Submit</button>
+      </form>
 
-        <form action='/recovery' class="my-form" method='post'>
-           
-          <h2>
-            Enter your email and submit, wait to receive OTP code to reset your
-            password
-          </h2>
-          <div class="text-field">
-            <label for="email"
-              >Email:
-              <input
-                type="email"
-                id="email"
-                name="email"
-                autocomplete="off"
-                placeholder="Your Email"
-                required
-              />
-              <svg
-                xmlns="http://www.w3.org/2000/svg"
-                width="24"
-                height="24"
-                viewBox="0 0 24 24"
-                stroke-width="2"
-                stroke="currentColor"
-                fill="none"
-                stroke-linecap="round"
-                stroke-linejoin="round"
-              >
-                <path stroke="none" d="M0 0h24v24H0z" fill="none"></path>
-                <path d="M12 12m-4 0a4 4 0 1 0 8 0a4 4 0 1 0 -8 0"></path>
-                <path
-                  d="M16 12v1.5a2.5 2.5 0 0 0 5 0v-1.5a9 9 0 1 0 -5.5 8.28"
-                ></path>
-              </svg>
-            </label>
-          </div>
-          <div id="error-message" class="error-message"></div>
-          <div id="notification-message" class="notification-message">{{msg}}</div>
-
-          <button type="submit" class="my-form__button">submit</button>
-        </form>
-      </div>
-    </div>
+      <div id="message"></div>
+    </main>
 
     <script src="../static/scripts/resetPassword.js"></script>
   </body>
