--- a/static/styles/resetPassword.css
+++ b/static/styles/resetPassword.css
@@ -1,22 +1,69 @@
-:root {
-  --primary: #a753ff;
-  --primary-light: #6667b0;
-  --violet-light: #a753ff;
-  --secondary: #1d1d1d;
-  --white: #f4f1ff;
-}
-
 body {
-  font-size: 16px;
-  background: var(--info-side-background);
-}
-
-* {
+  font-family: Arial, sans-serif;
+  background-color: #f5f5f5;
   margin: 0;
   padding: 0;
-  box-sizing: border-box;
-  font-family: Mulish;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
 }
 
-@media (max-width: 840px) {
+main {
+  background-color: #fff;
+  padding: 50px;
+  border-radius: 8px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+  width: 100%;
+  max-width: 400px;
+
+  margin: 50px;
+}
+
+h2 {
+  font-size: small;
+  margin-bottom: 20px;
+}
+
+label {
+  font-weight: bold;
+  display: block;
+  margin-bottom: 8px;
+}
+
+input[type="email"] {
+  width: 80%;
+  padding: 10px;
+  margin-bottom: 20px;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  font-size: 16px;
+}
+
+button[type="submit"] {
+  background-color: plum;
+  color: #fff;
+  border: none;
+  padding: 10px 20px;
+  border-radius: 4px;
+  font-size: 16px;
+  cursor: pointer;
+  width: 90%;
+}
+
+button[type="submit"]:hover {
+  background-color: #0056b3;
+}
+
+#message {
+  font-size: 14px;
+  color: green;
+  margin-top: 10px;
+}
+
+@media (max-width: 600px) {
+  main {
+    max-width: 100%;
+    border-radius: 0;
+  }
 }
