--- a/static/styles/resetPassword.css
+++ b/static/styles/resetPassword.css
@@ -39,9 +39,12 @@ input[type="email"] {
   border-radius: 4px;
   font-size: 16px;
 }
+input[type="email"]:focus {
+  background-color: #eae7ed;
+}
 
 button[type="submit"] {
-  background-color: plum;
+  background-color: #a753ff;
   color: #fff;
   border: none;
   padding: 10px 20px;
@@ -52,7 +55,7 @@ button[type="submit"] {
 }
 
 button[type="submit"]:hover {
-  background-color: #0056b3;
+  background-color: #b39eb5;
 }
 
 #message {
