fixed an issue with the login

--- a/template/pages/resetPassword.html
+++ b/template/pages/resetPassword.html
@@ -25,14 +25,16 @@
         password
       </h2>
       <form action="/recovery" method="post" id="resetPasswordForm">
-        <label for="email">Email:</label>
+          <label for="email">Email:</label>
         <input
           type="email"
           id="email"
+          name='email'
           placeholder="enter the email you registered with"
           required
         />
         <button type="submit">Submit</button>
+        <p>{{msg}}</p>
       </form>
 
       <div id="message"></div>
