--- a/template/pages/vendorPage.html
+++ b/template/pages/vendorPage.html
@@ -67,7 +67,7 @@
 
     <main class="container">
       <!-- Generate Tracking Number Section -->
-      <p id="userName">welcome Hamza</p>
+      <p id="userName">Welcome {{user}}</p>
       <section class="section">
         <h2>Generate Tracking Number</h2>
         <button id="generateBtn">Generate</button>
@@ -82,7 +82,6 @@
           <input type="text" id="updateTrackingNumberInput" required />
           <label for="updatedStatusSelect">Status:</label>
           <select id="updatedStatusSelect">
-            <option value="Shipped">Shipped</option>
             <option value="In Transit">In Transit</option>
             <option value="Delivered">Delivered</option>
           </select>
