added our pictures

--- a/template/pages/about.html
+++ b/template/pages/about.html
@@ -221,8 +221,13 @@
 
   <body>
     
-
+    <div style="background-color: #a753ff;">
+      <a href="./landingPage.html">
+        <img src="../static/assets/back-svgrepo-com" alt="" />
+      </a>
+      </div>
     <section class="about">
+      
       <h1>About Us</h1>
       <p style="font-weight: bold; ">With our Trackerr, tracking is easy and fast </p>
       <div class="about-info">
@@ -251,7 +256,7 @@ Trackerr offers a user-friendly interface that simplifies the management of ship
         <div class="card">
           <div class="card-img">
             <img
-              src="../static/login-02/assets/trackerr-logo.jpg"
+              src="../static/assets/Kingsley-Backend Engineer.jpg"
               alt="User 1"
             />
           </div>
@@ -268,7 +273,7 @@ Trackerr offers a user-friendly interface that simplifies the management of ship
         <div class="card">
           <div class="card-img">
             <img
-              src="../static/login-02/assets/trackerr-logo.jpg"
+              src="../static/assets/Yahya Waisu-frontEnend Engineer.jpg"
               alt="User 2"
             />
           </div>
@@ -284,7 +289,7 @@ Trackerr offers a user-friendly interface that simplifies the management of ship
         <div class="card">
           <div class="card-img">
             <img
-              src="../static/login-02/assets/trackerr-logo.jpg"
+              src="../static/assets/Bliss-Backend Engineer.jpg"
               alt="User 3"
             />
           </div>
@@ -300,7 +305,7 @@ Trackerr offers a user-friendly interface that simplifies the management of ship
       <div class="card">
         <div class="card-img">
           <img
-            src="../static/login-02/assets/trackerr-logo.jpg"
+            src="../static/assets/Hamza-frontend Engineer.png"
             alt="User 3"
           />
         </div>
@@ -309,8 +314,8 @@ Trackerr offers a user-friendly interface that simplifies the management of ship
           <p class="card-email">Front-end Engineer</p>
           <p class="card-role">Co-Founder</p>
           
-          <p class="card-email">hamza@example.com</p>
-          <p><button class="button">Contact</button></p>
+          <p class="card-email">amaduhamzjaarah300@gmail.com</p>
+          <a href=""><p><button class="button">Contact</button></p></a>
         </div>
       </div>
     </div>
