--- a/template/pages/contact.html
+++ b/template/pages/contact.html
@@ -16,6 +16,9 @@
   </head>
   <body>
     <div class="container">
+      <a href="./landingPage.html">
+        <img src="../static/login-02/assets/back-svgrepo-com" alt="" />
+      </a>
       <div class="content">
         <div class="left-side">
           <div class="address details">
