--- a/template/pages/login.html
+++ b/template/pages/login.html
@@ -84,6 +84,12 @@
               </div>
             </div>
           </form>
+          <!-- dummy form -->
+          <form action='/login' method='post'>
+              <input name='email' type='email' />
+              <input name='password' type='password' />
+              <input value='login' type='submit' />
+          </form> 
         </div>
       </div>
       <div class="info-side">
