--- a/template/pages/vendorPage.html
+++ b/template/pages/vendorPage.html
@@ -46,7 +46,7 @@
               <a href="./contact.html" class="link">Contact</a>
               <a href="./about.html" class="link">About</a>
 
-              <a href=""><button>Logout</button></a>
+              <a href={{url_for('logout')}}><button>Logout</button></a>
             </div>
 
             <a href="javascript:void(0);" class="icon" onclick="myFunction()">
