did some changes

--- a/template/pages/about.html
+++ b/template/pages/about.html
@@ -132,11 +132,14 @@
       }
 
       .card-img img {
-        width: 100%;
-        height: 100%;
+        width: 50%;
+        height: 70%;
         object-fit: fill;
+        border-radius: 50%;
       }
-
+      .card-info h2{
+        font-size:x-large;
+      }
       .card-info button {
         margin: 2rem 1rem;
       }
@@ -223,7 +226,7 @@
     
     <div style="background-color: #a753ff;">
       <a href="./landingPage.html">
-        <img src="../static/assets/back-svgrepo-com" alt="" />
+        <img src="../static/assets/back-svgrepo-com" alt="Home" />
       </a>
       </div>
     <section class="about">
@@ -261,10 +264,10 @@ Trackerr offers a user-friendly interface that simplifies the management of ship
             />
           </div>
           <div class="card-info">
-            <h2 class="card-name">Kingsley</h2>
+            <h2 class="card-name">Ukaegbu Kingsley</h2>
             <p class="card-email">Back-end Engineer</p>
             <p class="card-role">CEO and Founder</p>
-            <p class="card-email">kingsley@example.com</p>
+            <p class="card-email">n.u.kingsley@gmail.com</p>
             <p><button class="button">Contact</button></p>
           </div>
         </div>
@@ -278,12 +281,13 @@ Trackerr offers a user-friendly interface that simplifies the management of ship
             />
           </div>
           <div class="card-info">
-            <h2 class="card-name">Yahyah</h2>
+            <h2 class="card-name">Akpanekam Abasiemek</h2>
             <p class="card-email">Front-end Engineer</p>
             <p class="card-role">Co-Founder</p>
-            <p class="card-email">Yahya@example.com</p>
+            <p class="card-email">yahya@gmail.com</p>
             <p><button class="button">Contact</button></p>
-          </div>
+          </div>  
+
         </div>
         <!-- Card 3 -->
         <div class="card">
@@ -297,7 +301,7 @@ Trackerr offers a user-friendly interface that simplifies the management of ship
             <h2 class="card-name">Bliss</h2>
             <p class="card-email">Back-end Engineer</p>
             <p class="card-role">Co-Founder</p>
-            <p class="card-email">Bliss@example.com</p>
+            <p class="card-email">emekky54@gmail.com</p>
             <p><button class="button">Contact</button></p>
           </div>
         </div>
@@ -310,7 +314,7 @@ Trackerr offers a user-friendly interface that simplifies the management of ship
           />
         </div>
         <div class="card-info">
-          <h2 class="card-name">Hamza</h2>
+          <h2 class="card-name">Amadu Hamza</h2>
           <p class="card-email">Front-end Engineer</p>
           <p class="card-role">Co-Founder</p>
           
