--- a/template/pages/contact.html
+++ b/template/pages/contact.html
@@ -17,7 +17,7 @@
   <body>
     <div class="container">
       <a href="./landingPage.html">
-        <img src="../static/login-02/assets/back-svgrepo-com" alt="" />
+        <img src="../static/static/assets/back-svgrepo-com" alt="home" />
       </a>
       <div class="content">
         <div class="left-side">
