--- a/template/pages/vendorPage.html
+++ b/template/pages/vendorPage.html
@@ -42,7 +42,7 @@
                   alt="Logo"
                   class="logo"
               /></a>
-
+              <a href="./landingPage.html" class="link">Home</a>
               <a href="./contact.html" class="link">Contact</a>
               <a href="./about.html" class="link">About</a>
 
@@ -84,6 +84,7 @@
           <select id="updatedStatusSelect">
             <option value="In Transit">In Transit</option>
             <option value="Delivered">Delivered</option>
+            <option value="Returned">Returned</option>
           </select>
           <button type="submit">Submit</button>
         </form>
