--- a/static/login-02/style.css
+++ b/static/login-02/style.css
@@ -51,7 +51,7 @@ button:hover {
 }
 
 .socials-row > a:hover {
-  border: 1px solid var(--primary);
+  border: 1px solid #a753ff;
 }
 
 .divider {
@@ -65,7 +65,7 @@ button:hover {
 .divider-line {
   width: 100%;
   height: 1px;
-  background-color: var(--secondary);
+  background-color: #1d1d1d;
   opacity: 0.2;
 }
 
@@ -93,7 +93,7 @@ button:hover {
   flex-direction: column;
   justify-content: start;
   align-items: center;
-  background-color: var(--background);
+  background-color: #f4f1ff;
 }
 
 .info-side h2 {
@@ -209,7 +209,7 @@ button:hover {
 }
 
 .my-form__signup a {
-  color: var(--primary);
+  color: #a753ff;
   font-weight: 800;
   text-decoration: none;
   font-size: 18px;
